Collapsed Active Fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -146,6 +146,10 @@ th {
     display: none;
   }
 
+  #active{
+    width: 100%;
+  }
+
   .navbar-toggle{
     display: initial;
   }
